crates/ars-collections/tests/ui/tab_key_wrong_int_literal.stderr
error: TabKey int keys must be non-negative integer literals
 --> tests/ui/tab_key_wrong_int_literal.rs:5:21
  |
5 |     #[tab_key(int = "profile")]
  |                     ^^^^^^^^^
