crates/ars-collections/tests/ui/tab_key_wrong_int_literal.rs
use ars_collections::TabKey;

#[derive(TabKey)]
enum BadTab {
    #[tab_key(int = "profile")]
    Profile,
}

fn main() {}
